[gd_scene load_steps=9 format=3 uid="uid://8l03o82dvdt1"]

[ext_resource type="Theme" uid="uid://t3vl80sdwm8r" path="res://themes/main_menu.tres" id="1_bdika"]
[ext_resource type="Script" uid="uid://bcw5720bw6kr8" path="res://scripts/levels/selector_levels.gd" id="1_fknkm"]
[ext_resource type="Texture2D" uid="uid://cjgb3ek7evjlk" path="res://assets/bg_levels/bg_hole_level.png" id="2_idw86"]
[ext_resource type="Texture2D" uid="uid://b0va2xfdcumig" path="res://assets/bgparalax/Nebula Aqua-Pink.png" id="2_scevu"]
[ext_resource type="Texture2D" uid="uid://cbq1m0lx0y826" path="res://assets/bgparalax/Stars-Big_1_2_PC.png" id="3_g6ng8"]
[ext_resource type="Theme" uid="uid://d1i2k7nn4b0rb" path="res://themes/alpha_bg_full_elements.tres" id="4_1ce4t"]
[ext_resource type="Texture2D" uid="uid://cegulrq8wt5ct" path="res://assets/bgparalax/Nebula Blue.png" id="4_i23w3"]
[ext_resource type="Texture2D" uid="uid://ba4alegdgybrf" path="res://assets/bgparalax/Nebula Red.png" id="5_fknkm"]

[node name="SelectorLevels" type="Node2D"]
script = ExtResource("1_fknkm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BGParalax" type="Node2D" parent="CanvasLayer"]

[node name="Parallax2DNebula" type="Parallax2D" parent="CanvasLayer/BGParalax"]
visible = false
repeat_size = Vector2(0, 614.4)
autoscroll = Vector2(0, -50)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/BGParalax/Parallax2DNebula"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_i23w3")
centered = false

[node name="Parallax2DStars" type="Parallax2D" parent="CanvasLayer/BGParalax"]
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(0, 614.4)
autoscroll = Vector2(0, -10)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/BGParalax/Parallax2DStars"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_g6ng8")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BGParalax"]

[node name="Node2D" type="Node2D" parent="CanvasLayer"]

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Node2D"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 414.0
offset_top = -21.0
offset_right = 624.0
offset_bottom = 388.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Node2D"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -32.0
offset_right = 140.0
offset_bottom = 377.0
grow_vertical = 2
size_flags_horizontal = 0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = -161.5
offset_right = 118.5
offset_bottom = 161.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bdika")
text = "Select level:"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NebulaAqua-pink" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
position = Vector2(35, 36)
scale = Vector2(0.0168457, 0.0163574)
texture = ExtResource("4_i23w3")

[node name="ButtonLV1" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_bdika")

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/ButtonLV1"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_1ce4t")
text = "Level 1"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer/ButtonLV1"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_idw86")
expand_mode = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NebulaAqua-pink" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
position = Vector2(35, 36)
scale = Vector2(0.0168457, 0.0163574)
texture = ExtResource("2_scevu")

[node name="ButtonLV2" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_bdika")

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2/ButtonLV2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_1ce4t")
text = "Level 2"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer2/ButtonLV2"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_idw86")
expand_mode = 1

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NebulaAqua-pink" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
position = Vector2(35, 36)
scale = Vector2(0.0168457, 0.0163574)
texture = ExtResource("5_fknkm")

[node name="ButtonLV3" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_bdika")

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3/ButtonLV3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_1ce4t")
text = "Level 3"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer3/ButtonLV3"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_idw86")
expand_mode = 1

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/ButtonLV1" to="." method="_on_button_lv_1_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/ButtonLV2" to="." method="_on_button_lv_2_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer3/ButtonLV3" to="." method="_on_button_lv_3_pressed"]
