extends Node2D




func _on_button_lv_1_pressed() -> void:
	get_tree().change_scene_to_file("res://levels/world_01.tscn")


func _on_button_lv_2_pressed() -> void:
	get_tree().change_scene_to_file("res://levels/world_02.tscn")



func _on_button_lv_3_pressed() -> void:
	get_tree().change_scene_to_file("res://levels/world_03.tscn")
